--- a/bootstrap-DEV.yml
+++ b/bootstrap-DEV.yml
@@ -1,21 +1,119 @@
----
 server:
-  port: ${CONFIG.SERVER.PORT:8888}
+  port: 8761
+
 spring:
+  config:
+    activate:
+      onProfile: default
   application:
-    name: mitocode-config-server
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/pacocruzguzman/mitocode-config-data
-          default-label: development
-          username: pacocruzguzman
-          password: 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
+    name: discovery-server
+
 eureka:
+
+  instance:
+    hostname: localhost
+    preferIpAddress: true
+    leaseExpirationDurationInSeconds: 30
+    leaseRenewalIntervalInSeconds: 30
+
+
   client:
-    service-url:
-      defaultZone: http://discovery-server.mitocode.com:8761/eureka
+    fetchRegistry: false
+    registerWithEureka: false
+
+  datacenter: Mitocode
+  environment: Development
+
+
 ---
+
 server:
-  port: ${CONFIG.SERVER.PORT:9000}
+  port: 8761
+
+
+spring:
+  config:
+    activate:
+      onProfile: profile-01
+  application:
+    name: discovery-server
+
+eureka:
+
+  instance:
+    hostname: http://discovery-server-1.mitocode.com
+    preferIpAddress: true
+    leaseExpirationDurationInSeconds: 30
+    leaseRenewalIntervalInSeconds: 30
+
+
+  client:
+    fetchRegistry: false
+    registerWithEureka: false
+    serviceUrl:
+      defaultZone: http://discovery-server-2.mitocode.com:8762/eureka,http://discovery-server-3.mitocode.com:8763/eureka
+
+  datacenter: Mitocode
+  environment: Development
+
+---
+
+server:
+  port: 8762
+
+
+spring:
+  config:
+    activate:
+      onProfile: profile-02
+  application:
+    name: discovery-server
+
+eureka:
+
+  instance:
+    hostname: http://discovery-server-2.mitocode.com
+    preferIpAddress: true
+    leaseExpirationDurationInSeconds: 30
+    leaseRenewalIntervalInSeconds: 30
+
+
+  client:
+    fetchRegistry: false
+    registerWithEureka: false
+    serviceUrl:
+      defaultZone: http://discovery-server-1.mitocode.com:8761/eureka,http://discovery-server-3.mitocode.com:8763/eureka
+
+  datacenter: Mitocode
+  environment: Development
+
+---
+
+server:
+  port: 8763
+
+
+spring:
+  config:
+    activate:
+      onProfile: profile-03
+  application:
+    name: discovery-server
+
+eureka:
+
+  instance:
+    hostname: http://discovery-server-3.mitocode.com
+    preferIpAddress: true
+    leaseExpirationDurationInSeconds: 30
+    leaseRenewalIntervalInSeconds: 30
+
+
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://discovery-server-1.mitocode.com:8761/eureka,http://discovery-server-2.mitocode.com:8762/eureka
+
+  datacenter: Mitocode
+  environment: Development
