--- a/mitocode-licencia-service-DEV.yml
+++ b/mitocode-licencia-service-DEV.yml
@@ -9,9 +9,9 @@ spring:
       ddl-auto: update  
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: 
+    url: jdbc:mysql://localhost/servicios_transito
     username: mitocode
     password: mitocode
   data:
     mongodb:
-      uri: mongodb://mitocode:mitocode@localhost:27017/tbl_licencias
+      uri: mongodb://mitocode:mitocode@localhost:27017/servicios_transito
