Se corrigen credenciales de MySQL

--- a/mitocode-licencia-service-DEV.yml
+++ b/mitocode-licencia-service-DEV.yml
@@ -10,5 +10,5 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost/transito_servicios
-    username: mitocode
-    password: mitocode
+    username: root
+    password: root
