--- a/mitocode-licencia-service-DEV.yml
+++ b/mitocode-licencia-service-DEV.yml
@@ -12,3 +12,6 @@ spring:
     url: jdbc:mysql://localhost/transito_servicios
     username: root
     password: root
+  data:
+    mongodb:
+      uri: mongodb://mitocode:mitocode@localhost:27017/database  
