--- a/mitocode-licencia-service-DEV.yml
+++ b/mitocode-licencia-service-DEV.yml
@@ -1,7 +1,8 @@
----
 server:
   port: 8091
 spring:
+  jpa:
+    show-sql: true
   data:
     mongodb:
-      uri: mongodb://mitocode:mitocode@localhost:27017/servicios_transito
+      uri: mongodb://mitocode:mitocode@localhost:27017/servicios_transito?authSource=admin
